src/snapshots/kk__tests__compiler__typecheck__explicit_type_variable_5.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let arrayMapFirst<From, To> = \(
  xs: Array<Element= From>,
  f: \From => To
): Array<Element= To> =>
  let [head, ..._] = xs else \_ => []
  [head.f()]

let result = [{x= 3}].arrayMapFirst<To= string>(\_ => 2)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_5.kk:8:55
  │
8 │ let result = [{x= 3}].arrayMapFirst<To= string>(\_ => 2)
  │                                                       ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
